# Scrape-example

./: .gitignore  README.md  pyproject.toml  requirements.txt
dataextractor_amazon/: main.py
tests/: test_dataextractor_amazon.py
